fix settings button not responding if covered by file link

--- a/cmd/aurelius/assets/static/css/main.css
+++ b/cmd/aurelius/assets/static/css/main.css
@@ -101,7 +101,7 @@ header {
 /* Footer *********************************************************************/
 footer {
 	position: fixed;
-	z-index: -1;
+	z-index: 1;
 	right: 0;
 	bottom: 0;
 	margin: .5rem;
